--- a/npcs/Races Classes and Subclasses/class_abilities.yaml
+++ b/npcs/Races Classes and Subclasses/class_abilities.yaml
@@ -365,7 +365,7 @@
     - content: Can use Reaction to deflect or catch the missle when hit by a ranged weapon attack. Damage from the attack is reduced by 1d12 + 24. If damaged is reduced to 0, the missle is caught if he has one 
                free hand. Can spend 1 Ki point to make a ranged attack with the ammunition or weapon just caught. The attack is made with proficiency and counts as a monk weapon       
     - title: Slow Fall
-    - content: Can us a Reaction to falling damage by by x hp
+    - content: You can use your Reaction when you fall to reduce any Falling damage you take by an amount equal to five times your monk level.
     - title: Extra Attack
     - content: Can Attack twice per turn
     - title: Stunning Strike
