--- a/npcs/lasan_halfnight.yaml
+++ b/npcs/lasan_halfnight.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: young adult
+    age: Young Adult
 
     #
     # Races (case insensitive):
@@ -455,66 +455,99 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Charisma
+    - Intelligence
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - N/A
     skills:
-    - Artificer Abilities:
-      - Magical Tinkering: Can invest a spark of magic into mundane objects with a touch - Bright Light, Record Message, Record Sound or Odor, Create Picture or Text
-      - Spellcasting:
-         - Description: Requires Tinker's Tools as Spellcasting focus, Spell DC 13 
-           Cantrips: Mage Hand, Mending
-           1st Level: Alarm, Disguise Self, Detect Magic, Identify
-           2nd Level: Invisibility, Heat Metal 
-        Infuse Item: Imbue mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately,
-        Infusions Known: 4       
-      - The Right Tool for the Job: Can produce any set of artisan's tools with 1 hour work
+    - Junk Artifice
+    proficiencies:
+    - Performance
+    - Persuasion
+    - Deception
+    - Tinker's Tools
+  special-abilities:
+  - title: Artificer Abilities
+  - abilities:
+    - title: Magical Tinkering
+    - content: Can invest a spark of magic into mundane objects with a touch - Bright Light, Record Message, Record Sound or Odor, Create Picture or Text
+    - title: Artificer Spellcasting 
+    - content: Requires Tinker's Tools as Spellcasting focus
+    - title: Spell DC
+    - content: 13 
+    - title: Cantrip
+    - content: Mage Hand, Mending
+    - title: 1st Level
+    - content: Alarm, Disguise Self, Detect Magic, Identify
+    - title: 2nd Level
+    - content: Invisibility, Heat Metal 
+    - title: Infuse Item
+    - content: Imbue mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately,
+    - title: Infusions Known
+    - content: 4
+    - title: The Right Tool for the Job
+    - content: Can produce any set of artisan's tools with 1 hour work
+  - title: Battle Smith Abilities
+  - abilities: 
+    - title: Spellcasting
+    - abilities:
+    - title: Spell DC
+    - content: 13
+    - title: 3rd Level
+    - content: Heroism, Shield
+    - title: 5th Level
+    - content: Branding Smite, Warding Bond
+    - title: Tool Proficiency
+    - content: You gain proficiency with smith's tools. If you already have this proficiency, you gain proficiency with one other type of artisan's tools of your choice.
+    - title: Battle Ready
+    - content: Your combat training and your experiments with magic have paid off in two ways
+               You gain proficiency with martial weapons.
+               When you attack with a magic weapon, you can use your Intelligence modifier, instead of Strength or Dexterity modifier, for the attack and damage rolls.
+    - title: Steel Defender
+    - content: Your tinkering has borne you a faithful companion, a steel defender. It's friendly to you and your companions, and it obeys your commands. See its game statistics in the Steel Defender stat block, which
+               uses your proficiency bonus (PB) in several places. You determine the creature's appearance and whether it has two legs or four; your choice has no effect on its game statistics. In combat, the defender
+               shares your initiative count, but it takes its turn immediately after yours. It can move and use its reaction on its own, but the only action it takes on its turn is the Dodge action, unless you take a 
+               bonus action on your turn to command it to take another action. That action can be one in its stat block or some other action. If you are incapacitated, the defender can take any action of its choice, 
+               not just Dodge. If the Mending spell is cast on it, it regains 2d6 hit points. If it has died within the last hour, you can use your smith's tools as an action to revive it, provided you are within 5 
+               feet of it and you expend a spell slot of 1st level or higher. The steel defender returns to life after 1 minute with all its hit points restored. At the end of a long rest, you can create a new steel 
+               defender if you have smith's tools with you. If you already have a defender from this feature, the first one immediately perishes. The defender also perishes if you die.                          
+               Steel Defender - Medium construct
+               Armor Class - 15 (natural armor)
+               Stats - STR 14(+2) DEX 12(+1) CON 14(+2) INT 4(−3) WIS 10(+0) CHA 6(−2) 
+               Hit Points - 2 + your Intelligence modifier + 5 times your artificer level (the defender has a number of Hit Dice [d8s] equal to your artificer level)
+               Speed - 40 ft.     
+               Saving Throws - Dex +1 plus PB, Con +2 plus PB
+               Skills - Athletics +2 plus PB, Perception +0 plus PB x 2
+               Damage Immunities - poison
+               Condition Immunities - charmed, exhaustion, poisoned
+               Senses - Darkvision 60 ft., Passive Perception 10 + (PB x 2)
+               Languages - understands the languages you speak
+               Challenge —
+               Proficiency Bonus (PB) - equals your bonus
+               Vigilant - The defender can't be surprised.
+               Actions -
+               Force-Empowered Rend. Melee Weapon Attack - your spell attack modifier to hit, reach 5 ft., one target you can see. Hit 1d8 + PB force damage.
+               Repair - (3/Day). The magical mechanisms inside the defender restore 2d8 + PB hit points to itself or to one construct or object within 5 feet of it.
+               Reactions -
+               Deflect Attack - The defender imposes disadvantage on the attack roll of one creature it can see that is within 5 feet of it, provided the attack roll is against a creature other than the defender.
+    - title: Extra Attack
+    - content: You can attack twice, rather than once, whenever you take the Attack action on your turn.
+  - title: Feats
+  - content: Actor 
+  - title: Attacks
+  - content: 2 attacks with dagger or spell
+  - title: Combat Tactics
+  - content: will only take opportunity attacks, otherwise he lets his Steel Defender fight for him
 
-      Battle Smith Abilities:
-      - Spellcasting:
-        - Description: Requires Tinker's Tools as Spellcasting focus, Spell DC 13 
-          3rd Level: Heroism, Shield
-          5th Level: Branding Smite, Warding Bond
-        Battle Ready: your combat training and your experiments with magic have paid off in two ways;
-                      - You gain proficiency with martial weapons.
-                      - When you attack with a magic weapon, you can use your Intelligence modifier, instead of Strength or Dexterity modifier, for the attack and damage rolls
-        Steel Defender: your tinkering has borne you a faithful companion, a steel defender. It's friendly to you and your companions, and it obeys your commands. See its game statistics in the Steel Defender stat block, which
-                        uses your proficiency bonus (PB) in several places. You determine the creature's appearance and whether it has two legs or four; your choice has no effect on its game statistics. In combat, the defender
-                        shares your initiative count, but it takes its turn immediately after yours. It can move and use its reaction on its own, but the only action it takes on its turn is the Dodge action, unless you take a
-                        bonus action on your turn to command it to take another action. That action can be one in its stat block or some other action. If you are incapacitated, the defender can take any action of its choice,
-                        not just Dodge. If the Mending spell is cast on it, it regains 2d6 hit points. If it has died within the last hour, you can use your smith's tools as an action to revive it, provided you are within 5
-                        feet of it and you expend a spell slot of 1st level or higher. The steel defender returns to life after 1 minute with all its hit points restored. At the end of a long rest, you can create a new steel
-                        defender if you have smith's tools with you. If you already have a defender from this feature, the first one immediately perishes. The defender also perishes if you die       
-        Extra Attack: Can attack twice each turn
-
-    special-abilities:
-       - Proficiencies: Performance; Persuasion; Tinker's Tools
-       - Feats: Actor 
-       
-    attacks: |
-      2 attacks with dagger or spell
-    combat-tactics: |
-      will only take opportunity attacks, otherwise he lets his Steel Defender fight for him
-    special-equipment:
-    - Steel Defender:
-      - Armor Class: 15
-        Hit Points: 31
-        Speed: 40
-        str: 14
-        dex: 12
-        con: 14
-        int: 4
-        wis: 10
-        cha: 6
-        Proficiencies: Proficiency Bonus +3 - Atheltics +2 plus PB, Perception +0 plus PBx2, Dex Saves +3 plus PB, Con Saves +2 plus PB
-        Immunities: Immune to Poison and Psychic Damage. Immune to Poison, Charmed and Exhaustion. Resistant to Fire
-        Darkvision: 60ft. Passive Perception 22
-        Vigilant: Can't be surprised
-        Force Empowered Rend: Using a +6 Spellcasting modifier to hit one target within 5ft. Deals 1d8+6 force damage.
-        Repair: (3/Day) Restore 2d8+6 hit points to itself or another object or construct within 5ft
-        Extra Attack: Can take a second attack action each turn
-        Deflect Attack: Imposes disadvantage on the attack roll of one creature it can see that is within 5 feet of it provided that attack roll is against a creature other than it,
-                        The attacker takes 1d4+8 force damage. 
-        Intimidate: It is an imposing sight and all those seeing it for the first time must make a DC 12 Wisdom save or become firghtened for 1 round
-    - Dagger
-    - Various gadgets and other inventory for sale
+  - title: Special Equipment
+  - abilities:
+    - title: Junk
+    - content: Various junk gadgets and other inventory for sale
       
   profile:
 
@@ -528,3 +561,13 @@ npc:
     background-story: |
       Lasan is the son of a merchant who did the same thing he does today. Make items that work for a short period of time, sell them for more than their worth, and get out of Dodge before any one is the wiser.  His dad died not
       too long ago, and he's still trying to cope with it. He took up adventuring for a time, but it complicated him with too many attachments, he just wasn't ready for.
+    #
+    # Personality (or something like that):
+    # Expand on the introduction, appearance, expressions, mannerisms, etc.
+    # without any length limits.
+    #
+    # Required.
+    # No length limit for now.
+    #
+    personality: |
+      Lasan is a flim flam man. He produces junk artifacts, sells them at discount prices and moves on bufore anyone can figure out the scam. He is unscrupulous, shifty and slick and will not hesitate to scam anyone he can
