--- a/npcs/lrryk_bolde.yaml
+++ b/npcs/lrryk_bolde.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -329,6 +329,7 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - id: thieves_guild
       name: Thieve's Guild
 
@@ -459,33 +460,62 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Dexterity
+    - Charisma
+    - Intelligence
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - N/A
     skills:
-    - Kenku Abilities:
-      - Expert Forgery: Can duplicate other creatures' handwriting and craftwork. You have advantage on all checks made to produce forgeries or duplicates of existing objects         
-        Kenku Training: proficient in your choice of two of the following skills - Acrobatics, Deception, Stealth, and Sleight of Hand. 
-        Mimicry: can mimic sounds you have heard, including voices. A creature that hears the sounds you make can tell they are imitations with a successful Wisdom (Insight) check opposed by your Charisma (Deception) check
-        Kenku Curse: Can read and write any language they can learn, but can only use the Mimicry ability to speak
-      Rogue Abilities:
-      - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-        Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-        Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-        Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage
-      Thief Abilities:
-      - Fast Hands: you can use the Bonus Action granted by your Cunning Action to make a Dexterity (Sleight of Hand) check, use your thieves’ tools to Disarm a trap or open a lock, or take the Use an Object action
-        Second-Story Work: you gain the ability to climb faster than normal; climbing no longer costs you extra Movement. In addition, when you make a running jump, the distance you cover increases by a number of feet equal to
-                           your Dexterity modifier.       
+    - N/A
+    proficiencies:
+    - Stealth
+    - Sleight-of-Hand
+    - Deception    
+    - Acrobatics
+  special-abilities:
+  - title: Kenku Abilities
+  - abilities: 
+    - title: Expert Forgery
+    - content: Can duplicate other creatures' handwriting and craftwork. You have advantage on all checks made to produce forgeries or duplicates of existing objects         
+    - title: Kenku Training
+    - content: Proficient in your choice of two of the following skills; Acrobatics, Deception, Stealth, and Sleight of Hand. 
+    - title: Mimicry
+    - content: Can mimic sounds you have heard, including voices. A creature that hears the sounds you make can tell they are imitations with a successful Wisdom (Insight) check opposed by your Charisma (Deception) check
+    - title: Kenku Curse
+    - content: Can read and write any language they can learn, but can only use the Mimicry ability to speak
+  - title: Rogue Abilities
+  - abilities: 
+    - title: Expertise
+    - content: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+    - title: Sneak Attack
+    - content: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+    - title: Cunning Action
+    - content: Can take a bonus action on each turn to Hide, Disengage or Dash
+    - title: Uncanny Dodge
+    - content: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage
+  - title: Thief Abilities
+  - abilities: 
+    - title: Fast Hands
+    - content: You can use the Bonus Action granted by your Cunning Action to make a Dexterity (Sleight of Hand) check, use your thieves’ tools to Disarm a trap or open a lock, or take the Use an Object action.
+    - title: Second-Story Work
+    - content: When you choose this archetype at 3rd Level, you gain the ability to climb faster than normal; climbing no longer costs you extra Movement. In addition, when you make a running jump, the distance you 
+               cover increases by a number of feet equal to your Dexterity modifier.       
 
-    special-abilities:
-       - Proficiencies: Stealth, Survival, Acrobatics, Forgery Kit, Thieve's Tools
-         Feats: N/A 
-       
-    attacks: |
-      1 attacks with Glaive
-    combat-tactics: |
-      Lrryk has learned the hard way and does whatever he can to diffuse conflict. If he has tried everything, he will turn to his Conspirator's Bolas to subdue the opponents and negotiate further.
-    special-equipment:
-    - Conspirators Bolas: +2 to hit up to three separate creatures. When thrown these balls spread into three separate bolas that strike three separate chosen targets. If hit each target must make a DEX save vs. DC equal to the
-                          roll that hit plus an additional 2 or be grappled. If the target tries to move that turn they are also knocked prone.
+  - title: Attacks
+  - content: 1 attacks with Glaive
+  - title: Combat Tactics
+  - content: Lrryk has learned the hard way and does whatever he can to diffuse conflict. If he has tried everything, he will turn to his Conspirator's Bolas to subdue the opponents and negotiate further.
+
+  - title: Special Equipment
+  - abilities:
+    - title: Conspirators Bolas
+    - content: +2 to hit up to three separate creatures. When thrown these balls spread into three separate bolas that strike three separate chosen targets. If hit each target must make a DEX save vs. DC equal to the
+               roll that hit plus an additional 2 or be grappled. If the target tries to move that turn they are also knocked prone.
 
   profile:
 
