--- a/npcs/lucatiel_sky_derosier.yaml
+++ b/npcs/lucatiel_sky_derosier.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -330,10 +330,11 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - id: government_of_her_city
       name: Government of her city
     - id: thieves_guild
-      name: Thieves guild
+      name: Thieve's guild
 
 
     #
@@ -463,40 +464,76 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Dexterity
+    - Intelligence
+    - Charisma
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - N/A
     skills:
-    - Rogue Abilities:
-      - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-        Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-        Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-        Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
-        Evasion: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
-        Reliable Talent: Whenever you make an ability check that lets you add your Proficiency Bonus, you can treat a d20 roll of 9 or lower as a 10.
-      Thief Abilities:
-      - Fast Hands: you can use the Bonus Action granted by your Cunning Action to make a Dexterity (Sleight of Hand) check, use your thieves’ tools to Disarm a trap or open a lock, or take the Use an Object action
-        Second-Story Work: you gain the ability to climb faster than normal; climbing no longer costs you extra Movement. In addition, when you make a running jump, the distance you cover increases by a number of feet equal to
-                           your Dexterity modifier.
-        Supreme Sneak: you have advantage on a Dexterity (Stealth) check if you move no more than half your speed on the same turn
-        Use Magic Device: you have learned enough about the workings of magic that you can improvise the use of items even when they are not intended for you. You ignore all class, race, and level requirements on the use of
-                          Magic Items.       
+    - State Craft
+    proficiencies:
+    - Stealth
+    - Sleight-of-Hand
+    - Deception    
+    - Perception
+    - Persuasion
+  special-abilities:
+  - title: Rogue Abilities
+  - abilities: 
+    - title: Expertise
+    - content: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+    - title: Sneak Attack
+    - content: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+    - title: Cunning Action
+    - content: Can take a bonus action on each turn to Hide, Disengage or Dash
+    - title: Uncanny Dodge
+    - content: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
+    - title: Evasion
+    - content: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
+    - title: Reliable Talent
+    - content: Whenever you make an ability check that lets you add your Proficiency Bonus, you can treat a d20 roll of 9 or lower as a 10.
+  - title: Thief Abilities
+  - abilities: 
+    - title: Fast Hands
+    - content: You can use the Bonus Action granted by your Cunning Action to make a Dexterity (Sleight of Hand) check, use your thieves’ tools to Disarm a trap or open a lock, or take the Use an Object action.
+    - title: Second-Story Work
+    - content: When you choose this archetype at 3rd Level, you gain the ability to climb faster than normal; climbing no longer costs you extra Movement. In addition, when you make a running jump, the distance you 
+               cover increases by a number of feet equal to your Dexterity modifier.
+    - title: Supreme Sneak
+    - content: You have advantage on a Dexterity (Stealth) check if you move no more than half your speed on the same turn.
+    - title: Use Magic Device
+    - content: You have learned enough about the workings of magic that you can improvise the use of items even when they are not intended for you. You ignore all class, race, and level requirements on the use of 
+               Magic Items.       
+               
+  - title: Feats
+  - content: Sharpshooter, Weapons Master - Longbow, Crossbow, Shortbow, Dagger        
+  - title: Attacks
+  - content: 2 attacks with Longbow or Shadow Blade
+  - title: Combat Tactics
+  - content: Stays at range whenever possible, will use invisibility to remain safe if she feels threatened
 
-    special-abilities:
-       - Proficiencies: Stealth, Sleight-of-Hand, Perception, Persuasion
-         Feats: Sharpshooter, Weapons Master - Longbow, Crossbow, Shortbow, Dagger        
-       
-    attacks: |
-      2 attacks with Longbow or Shadow Blade
-    combat-tactics: |
-      Stays at range whenever possible, will use invisibility to remain safe if she feels threatened
-    special-equipment:
-    - Bracers of Archery: Requires Attunement - While wearing these bracers, you have proficiency with the Longbow and Shortbow, and you gain a +2 bonus to Damage Rolls on Ranged Attacks made with such Weapons.
-      Cloak of Protection: You gain a +1 bonus to AC and Saving Throws while you wear this cloak.
-      Longbow: +2
-      Shadow Blade: This magic dagger counts as a simple melee weapon with which you are proficient. It deals 2d8 psychic damage on a hit and has the finesse, light, and thrown properties (range 20/60). In addition, when you use
-                    the dagger to attack a target that is in dim light or darkness, you make the attack roll with advantage. If you drop the weapon or throw it, it dissipates at the end of the turn. Thereafter, you can use a
-                    bonus action to cause the sword to reappear in your hand
-      Ring of Invisibility: While wearing this ring, you can turn Invisible as an action. Anything you are wearing or carrying is Invisible with you. You remain Invisible until the ring is removed, until you Attack or Cast a
-                            Spell, or until you use a Bonus Action to become visible again
-      Boots of Levitation: Requires Attunement - While you wear these boots, you can use an action to cast the Levitate spell on yourself at will.
+  - title: Special Equipment
+  - abilities:
+    - title: Bracers of Archery
+    - content: Requires Attunement - While wearing these bracers, you have proficiency with the Longbow and Shortbow, and you gain a +2 bonus to Damage Rolls on Ranged Attacks made with such Weapons.
+    - title: Cloak of Protection
+    - content: You gain a +1 bonus to AC and Saving Throws while you wear this cloak.
+    - title: Longbow +2
+    - content: You have a +2 bonus to Attack and Damage Rolls made with this weapon. 
+    - title: Shadow Blade
+    - content: This magic dagger counts as a simple melee weapon with which you are proficient. It deals 2d8 psychic damage on a hit and has the finesse, light, and thrown properties (range 20/60). In addition, when you use
+               the dagger to attack a target that is in dim light or darkness, you make the attack roll with advantage. If you drop the weapon or throw it, it dissipates at the end of the turn. Thereafter, you can use a
+               bonus action to cause the sword to reappear in your hand
+    - title: Ring of Invisibility
+    - content: While wearing this ring, you can turn Invisible as an action. Anything you are wearing or carrying is Invisible with you. You remain Invisible until the ring is removed, until you Attack or Cast a
+               Spell, or until you use a Bonus Action to become visible again
+    - title: Boots of Levitation
+    - content: Requires Attunement - While you wear these boots, you can use an action to cast the Levitate spell on yourself at will.
 
   profile:
 
